--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="img">
-            <img src="/img/Product teardown-cuate.png" alt="hero image" />
+            <img src="img/Product teardown-cuate.png" alt="hero image" />
         </div>
     </section>
 </body>
